# 3rd-party-plugins

./: Makefile.am  README.md  Rules-softcamsetup-po.mak  configure.ac
AutoBouquetsMaker/CONTROL/: control
AutoBouquetsMaker/po/: de.po  en.po  en_GB.po  fi.po  fr.po  nl.po  tr.po
AutoBouquetsMaker/providers/: cable_uk_virgin.xml
Blindscan/po/: Blindscan-py.pot  Blindscan.pot  Makefile  Makefile.in  ar.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en.po  en_GB.po  es.po  et.po  fa.po  fi.po  fr.po  fy.po  he.po  hr.po  hu.po  is.po  it.po  lt.po  lv.po  nb.po  nl.po  no.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  th.po  tr.po  (+1 more)
RemoteChannelStreamConverter/src/: plugin.py
SoftcamSetup/: Makefile  Makefile.am  Makefile.in
SoftcamSetup/CONTROL/: control
SoftcamSetup/images/: Makefile  Makefile.am  Makefile.in
SoftcamSetup/locale/: Makefile  Makefile.am  Makefile.in
SoftcamSetup/locale/cs/: Makefile  Makefile.am  Makefile.in
SoftcamSetup/locale/cs/LC_MESSAGES/: Makefile  Makefile.am  Makefile.in
SoftcamSetup/locale/de/: Makefile  Makefile.am  Makefile.in
SoftcamSetup/locale/de/LC_MESSAGES/: Makefile  Makefile.am  Makefile.in
SoftcamSetup/locale/nl/: Makefile  Makefile.am  Makefile.in
SoftcamSetup/locale/nl/LC_MESSAGES/: Makefile  Makefile.am  Makefile.in
SoftcamSetup/locale/pl/: Makefile  Makefile.am  Makefile.in
SoftcamSetup/locale/pl/LC_MESSAGES/: Makefile  Makefile.am  Makefile.in
SoftcamSetup/locale/ru/: Makefile  Makefile.am  Makefile.in
SoftcamSetup/locale/ru/LC_MESSAGES/: Makefile  Makefile.am  Makefile.in
SoftcamSetup/locale/sl/: Makefile  Makefile.am  Makefile.in
SoftcamSetup/locale/sl/LC_MESSAGES/: Makefile  Makefile.am  Makefile.in
SoftcamSetup/meta/: Makefile  Makefile.am  Makefile.in
SoftcamSetup/po/: Makefile.am
SoftcamSetup/src/: Makefile  Makefile.in
TempFanControl/src/: plugin.py
